insert the break.

--- a/_posts/1001. site-search-using-whoosh.rst
+++ b/_posts/1001. site-search-using-whoosh.rst
@@ -9,6 +9,8 @@ I tried Google custom search for my updated site but I was unhappy with the cont
 
 A quick search revealed the awesome Whoosh_ search library. It is very well documented and super easy to use. 
 
+<!--more-->
+
 I wrote a 50-line python script (`buildIndex.py`_) to walk the _site directory and index the generated html files. It would be cool to integrate this into the Blogofile_ build process as a filter but I knew I could get a separate indexer going quicker.
 
 I've got a 40-line python cgi script (`searchIndex.cgi`_)to implement a jsonp_ service to search the index. This is called by 26 lines of javascript (`search.js`_) on the search page to display the results. 
